kustomize/observability/grafana/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: system-observability
spec:
  parentRefs:
    - kind: Gateway
      name: edge
      namespace: system-gateway
      sectionName: web-http
    - kind: Gateway
      name: edge
      namespace: system-gateway
      sectionName: web-https
  hostnames:
    - grafana.${external_domain}
  rules:
    - backendRefs:
        - kind: Service
          name: grafana
          port: 80
